--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ main{
 	float: left;
 	width: 250px;
 	display: inline-block;
+	height: 853px;
 }
 
 .left-aside img{
@@ -220,7 +221,7 @@ main img{
 }
 
 .news-title{
-	padding: 25px 20px;
+	padding: 20px;
 	font-size: 14px;
 }
 
@@ -316,14 +317,12 @@ main img{
 }
 
 .all-news{
-	min-width: 178px;
-	min-height: 45px;
-	background-color: #ffffff;
 	border: 1px solid #448ccb;
-	border-radius: 20px;
+	border-radius: 30px;
 	color: #448ccb;
-	margin: 26px 36px;
-	margin-top: 38px;
+	text-decoration: none;
+	padding: 20px 40px;
+	margin: 0 38px;
 }
 
 .news-2{
@@ -439,3 +438,60 @@ footer{
 	border-bottom: 1px dashed;
 	width: 54px;
 }
+
+/* four news */
+.center {
+	width: 460px;
+	margin: 0 auto;
+	/* overflow: auto; */
+  }
+  
+  .news-item {
+	float: left;
+	width: 220px;
+	margin-right: 20px;
+	margin-bottom: 20px;
+  }
+  
+  .news-item:nth-child(2n) {
+	margin-right: 0;
+  }
+  
+  .news-item .news-img {
+	width: 100%;
+	height: 142px;
+	object-fit: cover;
+  }
+  
+  h3 {
+	margin: 0;
+	padding: 0;
+	color: #000000;
+	font-family: Arial;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: -0.28px;
+	font-weight: bold;
+  }
+  
+  .news-item__props {
+	font-family: Arial;
+	margin-top: 10px;
+  }
+  
+  .category {
+	display: inline-block;
+	color: grey;
+	text-decoration: none;
+  }
+  
+  .time {
+	display: inline-block;
+	margin-left: 20px;
+  }
+  
+  .comments {
+	display: inline-block;
+	margin-left: 20px;
+  }
