--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ main{
 	background-color: #f9f9f9;
 	background-image: url('../img/shadow.png');
 	background-repeat: repeat-x;
-	padding-bottom: 60px;
+	padding-bottom: 39px;
 }
 
 .main-center{
@@ -189,10 +189,10 @@ main{
 
 .left-aside{
 	background-color: #ffffff;
-	float: left;
-	width: 250px;
-	display: inline-block;
-	height: 853px;
+    float: left;
+    width: 250px;
+    display: inline-block;
+    padding-bottom: 24px;
 }
 
 .left-aside img{
@@ -206,7 +206,7 @@ main{
 }
 
 main .content{
-	padding-top: 22px;
+	padding-top: 19px;
 	overflow: hidden;
 }
 
@@ -216,13 +216,50 @@ main img{
 
 .left-aside-title{
 	border-bottom: 1px #e5e5e5 solid;
-	padding: 20px;
-	font-size: 20px;
+	padding: 21px 19px;
+	padding-top: 25px;
+}
+
+.right-bottom-title{
+	border-bottom: 1px #e5e5e5 solid;
+    padding: 23px 19px;
+    padding-top: 28px;
+    font-size: 20px;
+}
+
+.left-aside-title h2{
+	font-size: 19px;
+	margin: 0;
+}
+
+.container-for-article{
+	padding-top: 20px;
 }
 
 .news-title{
 	padding: 20px;
-	font-size: 14px;
+    font-size: 14px;
+    padding-bottom: 11px;
+    line-height: 20px;
+    padding-top: 12px;
+    padding-right: 30px;
+}
+
+.news-bottom-title{
+	padding: 20px;
+    font-size: 14px;
+    padding-bottom: 11px;
+    line-height: 22px;
+    padding-top: 26px;
+    padding-right: 30px;
+}
+
+.news-data{
+	padding-bottom: 9px;
+}
+
+.news-bottom-data{
+	padding-bottom: 0px;
 }
 
 .news-theme{
@@ -231,6 +268,13 @@ main img{
 	margin-left: 20px;
 	display: inline-block;
 	width: 100px;
+}
+
+.news-3-theme{
+	font-size: 12px;
+	color: #c3c3ca;
+	margin-left: 20px;
+	display: inline-block;
 }
 
 .news-time{
@@ -249,18 +293,32 @@ main img{
 	padding-top: 114px;
 	color: #ffffff;
 	margin-bottom: 20px;
+	padding-bottom: 20px;
 }
 
 .news-1-theme{
 	padding-left: 20px;
-	padding-bottom: 26px;
-	font-size: 12px; 
+    padding-bottom: 16px;
+    font-size: 12px;
+}
+
+.news-2-theme{
+	padding-left: 20px;
+    padding-bottom: 22px;
+    font-size: 12px;
 }
 
 .news-1-title{
 	font-size: 30px;
 	padding-left: 20px;
-	padding-bottom: 30px;
+	padding-bottom: 20px;
+}
+
+.news-2-title{
+	font-size: 30px;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	padding-right: 101px;
 }
 
 .news-1-date{
@@ -268,6 +326,13 @@ main img{
 	font-size: 12px;
 	display: inline-block;
 	padding-bottom: 18px;
+}
+
+.news-2-date{
+	padding-left: 20px;
+	font-size: 12px;
+	display: inline-block;
+	padding-bottom: 24px;
 }
 
 .news-1-time{
@@ -304,10 +369,12 @@ main img{
 
 .news-title-center{
 	max-width: 221px;
-	padding-top: 10px;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 17px;
+	padding-top: 3px;
+	padding-right: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    line-height: 19px;
 }
 
 .news-center-theme{
@@ -318,31 +385,33 @@ main img{
 
 .all-news{
 	border: 1px solid #448ccb;
-	border-radius: 30px;
-	font-size: 14px;
-	color: #448ccb;
-	text-decoration: none;
-	padding: 17px 50px;
-	margin: 0 28px;
-	margin-top: 20px;
-	display: inline-block;
+    border-radius: 30px;
+    color: #448ccb;
+    text-decoration: none;
+    padding: 13px 45px;
+    margin: 0px 36px;
+    display: inline-block;
+    margin-top: 27px;
+    font-size: 15px;
 }
 
 .news-2{
 	color: #ffffff;
-	display: inline-block;
-	background-image: url('../img/news-bg-6.png');
-	max-width: 588px;
-	max-height: 393px;
-	padding-top: 108px;
-	margin: 20px 0;
-	float: left;
+    display: inline-block;
+    background-image: url(../img/news-bg-6.png);
+    max-width: 588px;
+    max-height: 393px;
+    padding-top: 105px;
+    margin: 20px 0;
+    margin-top: 20px;
+    float: left;
 }
 
 .news-text{
 	font-size: 14px;
-	padding-left: 20px;
-	margin-bottom: 45px;
+    padding-left: 20px;
+    margin-bottom: 42px;
+    line-height: 19px;
 }
 
 .famous-news{
@@ -352,7 +421,8 @@ main img{
 	float: right;
 	max-height: 393px;
 	margin: 20px 0;
-	padding-bottom: 10px;
+	margin-top: 11px;
+	padding-bottom: 22px;
 }
 
 .news img{
@@ -369,14 +439,14 @@ footer{
 
 .footer-bottom{
 	border-top: 1px solid #26354e;
-	padding: 20px 0;
-	text-align: center;
-	font-size: 14px;
-	color: #8d9198;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 13px;
+    color: #8d9198;
 }
 
 .footer-top{
-	padding: 60px 0;
+	padding: 56px 0;
 	color: #ffffff;
 	overflow: hidden;
 }
@@ -388,7 +458,7 @@ footer{
 }
 
 .element-footer{
-	margin-bottom: 20px;
+	margin-bottom: 14px;
 }
 
 .row-footer div:last-child{
@@ -409,8 +479,17 @@ footer{
 }
 
 .right-row-footer img{
-	margin-right: 20px;
-	margin-bottom: 20px;
+	margin-right: 16px;
+	margin-bottom: 37px;
+}
+
+.call-number{
+	margin-bottom: 25px;
+}
+
+.right-row-footer .last-img{
+	margin-right: 0;
+	margin-bottom: 37px;
 }
 
 .right-row-footer img:last-child{
@@ -453,7 +532,7 @@ footer{
 	float: left;
 	width: 220px;
 	margin-right: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
   }
   
   .news-item:nth-child(2n) {
