--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,67 @@
-html, body{
+html, body {
 	margin: 0;
 	padding: 0;
 	font-family: Arial;
 }
 
-img{
+img {
 	display: inline-block;
 }
 
-.top-bar{
+.top-bar {
 	height: 55px;
 	background-color: #00122f;
 }
 
-.top-bar a{
+.top-bar a {
 	color: #ffffff;
 }
 
-.content{
+.content {
 	width: 1000px;
 	margin: 0 auto;
 }
 
-.title{
+.title {
 	float: left;
-	color: #ffffff;
-	padding: 20px 0;
+    color: #ffffff;
+    padding: 20px 0;
+    margin: 0;
+    font-size: 14px;
+    padding-top: 19px;
 }
 
-.date-time{
+.date-time {
 	float: right;
 	color: #ffffff;
 	padding: 20px 0;
 }
 
-.top-header{
+.top-header {
 	padding: 40px 0;
 	height: 80px;
 	padding-bottom: 0;
 
 }
 
-.top-header-left{
+.top-header-left {
 	display: inline-block;
 	float: left;
 	overflow: hidden;
 	vertical-align: center;
 }
 
-.top-header-right{
+.top-header-right {
 	display: inline-block;
 	float: right;
 }
 
-.logo{
+.logo {
 	margin-right: 60px;
 	display: inline-block;
 }
 
-.term{
+.term {
 	display: inline-block;
 	padding-top: 13px;
 	margin: 0;
@@ -105,28 +108,11 @@ img{
   cursor: pointer;
 }
 
-nav{
+nav {
 	text-align: left;
 	font-size: 16px;
 	padding-bottom: 35px;
 }
-
-/*nav menu{
-	display: inline-block;
-	margin: 0;
-	padding: 0;
-	color: #e5e5e8;
-}
-
-nav li{
-	display: inline-block;
-	margin: 0 20px;
-}
-
-nav a{
-	text-decoration: none;
-	color: #000000;
-}*/
 
 nav ul {
   list-style-type: none;
@@ -148,11 +134,11 @@ nav ul li a {
   padding: 0 16px;
 }
 
-.first{
+.first {
 	padding-left: 0;
 }
 
-.last{
+.last {
 	padding-right: 0;
 }
 
@@ -173,21 +159,21 @@ nav ul li:last-child a:after {
 }
 
 
-main{
+main {
 	background-color: #f9f9f9;
 	background-image: url('../img/shadow.png');
 	background-repeat: repeat-x;
 	padding-bottom: 39px;
 }
 
-.main-center{
+.main-center {
 	width: 460px;
 	margin: 0 20px;
 	height: 500px;
 	display: inline-block;
 }
 
-.left-aside{
+.left-aside {
 	background-color: #ffffff;
     float: left;
     width: 250px;
@@ -195,32 +181,32 @@ main{
     padding-bottom: 24px;
 }
 
-.left-aside img{
+.left-aside img {
 	margin: 0 !important;
 }
 
-.right-aside{
+.right-aside {
 	float: right;
 	width: 250px;
 	display: inline-block;
 }
 
-main .content{
+main .content {
 	padding-top: 19px;
 	overflow: hidden;
 }
 
-main img{
+main img {
 	margin-bottom: 20px;
 }
 
-.left-aside-title{
+.left-aside-title {
 	border-bottom: 1px #e5e5e5 solid;
 	padding: 21px 19px;
 	padding-top: 25px;
 }
 
-.right-bottom-title{
+.right-bottom-title {
 	border-bottom: 1px #e5e5e5 solid;
 	margin: 0;
     padding: 23px 19px;
@@ -228,25 +214,26 @@ main img{
     font-size: 20px;
 }
 
-.left-aside-title h2{
+.left-aside-title h2 {
 	font-size: 19px;
 	margin: 0;
 }
 
-.container-for-article{
+.container-for-article {
 	padding-top: 20px;
 }
 
-.news-title{
+.news-title {
 	padding: 20px;
     font-size: 14px;
     padding-bottom: 11px;
     line-height: 20px;
     padding-top: 12px;
-    padding-right: 30px;
+	padding-right: 30px;
+	font-weight: normal;
 }
 
-.news-bottom-title{
+.news-bottom-title {
 	padding: 20px;
     font-size: 14px;
     padding-bottom: 11px;
@@ -256,15 +243,15 @@ main img{
 	margin: 0;
 }
 
-.news-data{
+.news-data {
 	padding-bottom: 8px;
 }
 
-.news-bottom-data{
+.news-bottom-data {
 	padding-bottom: 0px;
 }
 
-.news-theme{
+.news-theme {
 	font-size: 12px;
 	color: #c3c3ca;
 	margin-left: 20px;
@@ -272,23 +259,24 @@ main img{
 	width: 100px;
 }
 
-.news-3-theme{
+.news-3-theme {
 	font-size: 12px;
 	color: #c3c3ca;
 	margin-left: 20px;
 	display: inline-block;
+	width: 65px;
 }
 
-.news-time{
+.news-time {
 	display: inline-block;
 	font-size: 12px;
-	margin-right: 10px;
+	margin-right: 15px;
 	background-image: url('../img/time.png');
 	background-repeat: no-repeat;
 	padding-left: 15px;
 }
 
-.news-comment{
+.news-comment {
 	display: inline-block;
 	font-size: 12px;
 	padding-left: 15px;
@@ -296,56 +284,60 @@ main img{
 	background-repeat: no-repeat;
 }
 
-.news-1{
+.news-1 {
 	background-image: url('../img/news-bg-1.png');
 	padding-top: 114px;
 	color: #ffffff;
 	margin-bottom: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 24px;
 }
 
-.news-1-theme{
+.news-1-theme {
 	padding-left: 20px;
     padding-bottom: 16px;
     font-size: 12px;
 }
 
-.news-2-theme{
+.news-2-theme {
 	padding-left: 20px;
     padding-bottom: 22px;
     font-size: 12px;
 }
 
-.news-1-title{
+.news-1-title {
 	font-size: 30px;
 	padding-left: 20px;
 	padding-bottom: 20px;
 	margin: 0;
+	line-height: 33px;
+	color: #ffffff;
 }
 
-.news-2-title{
+.news-2-title {
 	font-size: 30px;
-	padding-left: 20px;
-	padding-bottom: 10px;
-	padding-right: 101px;
-	margin: 0;
+    padding-left: 20px;
+    padding-bottom: 5px;
+    padding-right: 109px;
+    margin: 0;
+	line-height: 36px;
+	color: #ffffff;
 }
 
-.news-1-date{
+.news-1-date {
 	padding-left: 20px;
 	font-size: 12px;
 	display: inline-block;
 	padding-bottom: 18px;
 }
 
-.news-2-date{
+.news-2-date {
 	padding-left: 20px;
 	font-size: 12px;
 	display: inline-block;
 	padding-bottom: 24px;
 }
 
-.news-1-time{
+.news-1-time {
 	font-size: 12px;
 	display: inline-block;
 	background-image: url('../img/clock.png');
@@ -354,36 +346,36 @@ main img{
 	margin-left: 20px;
 }
 
-.news-1-time img{
+.news-1-time img {
 	margin: 0;
 }
 
-.news{
+.news {
 	display: inline-block;
 }
 
-.row{
+.row {
 	overflow: hidden;
 	margin-bottom: 20px;
 }
 
-.left-column{
+.left-column {
 	padding-right: 13px;
 	float: left;
 }
 
-.right-column{
+.right-column {
 	float: right;
 }
 
-.main-center img{
+.main-center img {
 	margin: 0;
 }
 
-.news-title-center{
+.news-title-center {
 	max-width: 221px;
 	padding-top: 3px;
-	padding-right: 10px;
+	padding-right: 13px;
     font-size: 14px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -391,13 +383,17 @@ main img{
 	margin-top: 0;
 }
 
-.news-center-theme{
+.news-center-theme {
 	margin: 0;
-	width: auto;
-	padding-right: 15px;
+	width: 67px;
+	padding-right: 0;
 }
 
-.all-news{
+.social {
+	width: 73px;
+}
+
+.all-news {
 	border: 1px solid #448ccb;
     border-radius: 30px;
     color: #448ccb;
@@ -409,19 +405,19 @@ main img{
     font-size: 15px;
 }
 
-.news-2{
+.news-2 {
 	color: #ffffff;
     display: inline-block;
     background-image: url(../img/news-bg-6.png);
     max-width: 588px;
     max-height: 393px;
-    padding-top: 105px;
+    padding-top: 104px;
     margin: 20px 0;
-    margin-top: 22px;
+    margin-top: 26px;
     float: left;
 }
 
-.news-text{
+.news-text {
 	font-size: 14px;
     padding-left: 20px;
 	margin-bottom: 42px;
@@ -429,7 +425,7 @@ main img{
     line-height: 19px;
 }
 
-.famous-news{
+.famous-news {
 	display: inline-block;
 	width: 412px;
 	background-color: #ffffff;
@@ -437,113 +433,113 @@ main img{
 	max-height: 393px;
 	margin: 20px 0;
 	margin-top: 11px;
-	padding-bottom: 22px;
+	padding-bottom: 25px;
 }
 
-.news img{
+.news img {
 	margin: 0px;
 }
 
-.baner2{
+.baner2 {
 	margin: 0;
 }
 
-footer{
+footer {
 	background-color: #00122f;
 }
 
-.footer-bottom{
+.footer-bottom {
 	border-top: 1px solid #26354e;
-    padding: 15px 0;
+    padding: 20px 0;
     text-align: center;
     font-size: 13px;
     color: #8d9198;
 }
 
-.footer-top{
+.footer-top {
 	padding: 56px 0;
 	padding-bottom: 43px;
 	color: #ffffff;
 	overflow: hidden;
 }
 
-.row-footer{
+.row-footer {
 	display: inline-block;
 	float: left;
 	margin-right: 60px;
 }
 
-.element-footer{
+.element-footer {
 	margin-bottom: 14px;
 	margin-right: 24px;
 }
 
-.element-footer-social{
+.element-footer-social {
 	margin-bottom: 14px;
 	margin-right: 16px;
 	display: inline;
 }
 
-.element-footer-social:last-child{
+.element-footer-social:last-child {
 	margin-bottom: 14px;
 	margin-right: 0;
 	display: inline;
 }
 
-.row-footer div:last-child{
+.row-footer div:last-child {
 	margin-bottom: 0;
 }
 
-.logo-footer{
+.logo-footer {
 	margin-bottom: 20px;
 }
 
-.center-row-footer{
+.center-row-footer {
 	margin-left: 116px;
 }
 
-.right-row-footer{
+.right-row-footer {
 	margin-right: 0;
 	float: right;
 }
 
-.right-row-footer img{
+.right-row-footer img {
 	margin-right: 16px;
 	margin-bottom: 37px;
 }
 
-.element-footer-social img{
+.element-footer-social img {
 	margin: 0;
 }
 
-.call-number{
+.call-number {
 	margin-bottom: 25px;
 	padding-left: 33px;
 	background-image: url('../img/phone.png');
 	background-repeat: no-repeat;
 }
 
-.e-mail{
+.e-mail {
 	padding-left: 33px;
 	background-image: url('../img/mail.png');
 	background-repeat: no-repeat;
 }
 
-.right-row-footer .last-img{
+.right-row-footer .last-img {
 	margin-right: 0;
 	margin-bottom: 37px;
 }
 
-.right-row-footer img:last-child{
+.right-row-footer img:last-child {
 	margin-right: 0;
 }
 
-.logotips{
+.logotips {
 	margin-bottom: 0 !important;
 	margin-right: 20px !important;
 }
 
-.city{
+.city {
 	display: inline-block;
 	background-image: url('../img/city-bg.png');
 	background-repeat: no-repeat;
@@ -556,7 +552,7 @@ footer{
 	text-decoration-style: dashed;
 }
 
-.city p{
+.city p {
 	margin: 0;
 	text-decoration: none;
 	border-bottom: 1px dashed;
@@ -567,7 +563,6 @@ footer{
 .center {
 	width: 460px;
 	margin: 0 auto;
-	/* overflow: auto; */
   }
   
   .news-item {
@@ -620,25 +615,25 @@ footer{
 	margin-left: 20px;
   }
 
-  .cat{
+  .cat {
 	color: #c3c3ca;
 	text-decoration: none;
   }
 
-  .footer-left{
+  .footer-left {
 	  columns: 2;
 	  list-style-type: none;
 	  padding: 0;
 	  margin: 0;
   }
 
-  .footer-center{
+  .footer-center {
 	  list-style-type: none;
 	  padding: 0;
 	  margin: 0;
   }
 
-  .social-logo{
+  .social-logo {
 	  list-style-type: none;
 	  padding: 0;
 	  margin: 0;
@@ -646,7 +641,7 @@ footer{
 	  margin-bottom: 40px;
   }
 
-  .element-footer a{
+  .element-footer a {
 	  color: #ffffff;
 	  text-decoration: none;
   }
