--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ main {
 	float: right;
 	width: 250px;
 	display: inline-block;
+	margin-bottom: 49px;
 }
 
 main .content {
@@ -644,4 +645,15 @@ h3 {
 .element-footer a {
 	color: #ffffff;
 	text-decoration: none;
+}
+
+.currency {
+	display: inline-block;
+	padding: 20px 20px;
+	padding-bottom: 0;
+}
+
+.money {
+	margin-top: 10px;
+	border-top: 1px solid #e5e5e5;
 }
